--- a/template.ejs
+++ b/template.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <div id='example'></div>
+  <div id='root'></div>
   <div id="googleMap" style="width:100%;height:400px;display:none;"></div>
 
   <script>
